--- a/configs/api-nginx.yml
+++ b/configs/api-nginx.yml
@@ -7,6 +7,7 @@ api:
 tokens:
   twitch: tokens/twitch.yml
 nginx-settings:
+  root_path: '/api'
   docs_url: '/api/docs'
   redoc_url: '/api/redoc'
   openapi_url: '/api/openapi.json'
