smnall changes to nginx redirect

--- a/configs/api-nginx.yml
+++ b/configs/api-nginx.yml
@@ -8,6 +8,6 @@ tokens:
   twitch: tokens/twitch.yml
 nginx-settings:
   root_path: '/api'
-  docs_url: '/api/docs'
-  redoc_url: '/api/redoc'
-  openapi_url: '/api/openapi.json'
+  docs_url: '/docs'
+  redoc_url: '/redoc'
+  openapi_url: '/openapi.json'
