--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ asgiref==3.4.1
 astor==0.8.1
 async-generator==1.10
 async-timeout==3.0.1
+asyncbg==0.8.0
 attrs==21.2.0
 Babel==2.9.1
 backcall==0.2.0
@@ -76,6 +77,7 @@ Pygments==2.9.0
 pyparsing==2.4.7
 pyrsistent==0.18.0
 python-dateutil==2.8.2
+python-osc==1.7.7
 pytz==2021.1
 PyYAML==5.4.1
 pyzmq==22.2.1
