--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ asyncbg==0.8.0
 attrs==21.2.0
 Babel==2.9.1
 backcall==0.2.0
+backoff==1.11.1
 base58==2.1.0
 bleach==4.0.0
 blinker==1.4
@@ -73,6 +74,7 @@ pycparser==2.20
 pydantic==1.8.2
 pydeck==0.6.2
 Pygments==2.9.0
+Pympler==1.0.1
 pyparsing==2.4.7
 pyrsistent==0.18.0
 python-dateutil==2.8.2
@@ -88,7 +90,7 @@ six==1.16.0
 smmap==4.0.0
 sniffio==1.2.0
 starlette==0.14.2
-streamlit==0.86.0
+streamlit==1.3.0
 terminado==0.10.1
 testpath==0.5.0
 toml==0.10.2
